# decoder-benchmark

./: CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: run_benchmark.py  run_qldpc_export.py
notebooks/: 01_decoder_comparison.ipynb
src/decbench/: __init__.py  base.py  cli.py  css_export.py  dem_matrices.py  leaderboard.py  registry.py  runner.py  types.py  viz.py
src/decbench/decoders/: __init__.py  bp.py  bposd.py  mwpm.py  union_find.py
tests/: test_decoders.py  test_dem_matrices.py  test_runner.py
