[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decoder-benchmark"
version = "0.1.0"
description = "A benchmarking framework for surface-code decoders: MWPM, union-find and belief propagation compared on accuracy, runtime and memory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Andrew Fogelis" }]
keywords = ["quantum-error-correction", "decoder", "mwpm", "union-find", "belief-propagation", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "surface-code-simulator @ git+https://github.com/afogelis/surface-code-simulator.git@v0.1.0",
    "stim>=1.13",
    "pymatching>=2.1",
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "matplotlib>=3.7",
    "pydantic>=2.5",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "jupyter>=1.0", "nbformat>=5.9", "ruff>=0.6"]
# Optional optimized reference decoders. 'ldpc' (BP-OSD) has no wheels on the
# newest CPython releases, so it is kept out of the default install.
optimized = ["ldpc>=2.1"]

[project.scripts]
decbench = "decbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["decbench"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
